--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <header>
     <h1>Ласкаво просимо у світ моїх навчальних додатків!</h1>
     <p>Тут ти дізнаєшся, які додатки допомагають мені вчитися ефективно.</p>
+    <h2>Створив: Яковенко Олександр</h2>
     <a class="btn" href="pages/2.html">Почати</a>
 
     <div class="slider">
@@ -31,3 +32,4 @@
   <script src="scripts/script.js"></script>
 </body>
 </html>
+
