--- a/pages/6.html
+++ b/pages/6.html
@@ -105,7 +105,7 @@
         <div class="app-info">
           <p><strong>Тип ліцензії:</strong> Умовно безкоштовна</p>
           <p><strong>Категорія:</strong> Відеоконференції</p>
-          <p><strong>Платформа:</strong> Веб, Windows, macOS, Android, iOS</p>
+          <p><strong>Платформа:</strong> Windows, macOS, Android, iOS</p>
         </div>
       </div>
       <div class="app-usage">
@@ -123,7 +123,7 @@
         <div class="app-info">
           <p><strong>Тип ліцензії:</strong> Безкоштовна</p>
           <p><strong>Категорія:</strong> Відеоконференції</p>
-          <p><strong>Платформа:</strong> Веб, Windows, macOS, Android, iOS</p>
+          <p><strong>Платформа:</strong> Windows, macOS, Android, iOS</p>
         </div>
       </div>
       <div class="app-usage">
@@ -216,4 +216,5 @@
 
   </main>
 </body>
+
 </html>
